# FinGPT-Search-Agent

./: .gitignore  AGENTS.md  CLAUDE.md  Installer_Mac.sh  Installer_Win.ps1  LICENSE  MIGRATION_TO_UNIFIED_SETUP.md  MONOREPO_SETUP.md  Makefile  README.md  dependencies.txt  installDependencies.sh  installDependencies_Mac.sh  make.ps1  package-lock.json  pyproject.toml  readthedocs.yml  requirements.txt  requirements_mac.txt  requirements_sphinx.txt  requirements_win.txt  start_agent.rst
ARCHIVED/: installDependencies_Win.sh
ChatBot-Fin/Extension-ChatBot-Fin/: check-dist.js  package-lock.json  package.json  webpack.config.js
ChatBot-Fin/Extension-ChatBot-Fin/src/: content_archive.js  index.html  main.js  manifest.json  textbox.css
ChatBot-Fin/chat_server/: .google-cookie  preferred_urls.txt
ChatBot-Fin/chat_server/chat_server/: urls.py
ChatBot-Fin/chat_server/chat_server_app/: questionLog.csv  views.py
ChatBot-Fin/chat_server/datascraper/: cdm_rag.py  create_embeddings.py  datascraper.py  test.py
Docs/source/: code_of_conduct.rst  conf.py  index.rst  install_agent_with_installer.rst  installer_agent_install.rst  installer_agent_install_old.rst  introduction.rst  manual_install.rst  project_structure.rst  recent_improvements.rst  start_agent.rst  start_agent_mac.rst  start_agent_win.rst  team.rst
Docs/source/usage/: advanced_usage.rst  basic_usage.rst  index.rst
FinGPT-desktop/: main.js  package-lock.json  package.json  renderer.html  renderer.js
Main/: README.md
Main/back-end/datascraper/: create_embeddings.py  datascraper.py  test.py
Main/backend/: DEPENDENCY_MANAGEMENT.md  MCP_INSTALLATION.md  db.sqlite3  embeddings.pkl  export_requirements.py  manage_deps.py  package.json  pyproject.toml  test_models.py
Main/backend/api/: __init__.py  apps.py  builtin_tools.py  consumers.py  preferred_urls.txt  questionLog.csv  routing.py  views.py
Main/backend/chat_server/: asgi.py  settings.py  urls.py
Main/backend/chat_server_app/: __init__.py  apps.py  questionLog.csv  views.py
Main/backend/data/: preferred_links.json
Main/backend/datascraper/: .gitignore  R2C_README.md  __init__.py  agent.py  cdm_rag.py  create_embeddings.py  datascraper.py  models_config.py  preferred_links_manager.py  r2c_context_manager.py  test_mcp.py
Main/backend/datascraper/mcp/: __init__.py  mcp_tools.py
Main/backend/datascraper/test/: test_file_1.txt
Main/backend/django_config/: asgi.py  settings.py  urls.py  wsgi.py
Main/backend/mcp_client/: __init__.py  agent.py
Main/backend/scripts/: __init__.py  export_requirements.py
Main/front-end/: webpack.config.js
Main/frontend/: build-css.js  check-dist.js  package-lock.json  package.json  webpack.config.js
Requirements/: requirements_mac.txt  requirements_win.txt
doc/source/: conf.py
docs/source/: agent_setup.rst  conf.py  index.rst  introduction.rst  project_structure.rst
mcp-server/: pyproject.toml  server.py
scripts/: __init__.py  dev_setup.py  install_all.py
(+32 files in other folders)
