[project]
name = "fingpt-mcp-server"
version = "1.0.0"
description = "Official MCP Server for FinGPT using mcp[cli] SDK"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.1.0",
    "fastmcp",
    "starlette",
]

#[project.scripts]
#fingpt-mcp-server = "server_official:main"
